# BloodBankEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  reset.json  test_telemetry.py  ui_test.json  validate_compliance.py
bloodbank/: __init__.py  client.py  data_fetcher.py  environment.py  models.py  server.py
data/: eraktkosh_stock.csv  eraktkosh_stock_20260407_192217.csv  eraktkosh_stock_20260407_192217.json  eraktkosh_stock_20260407_192520.json
server/: app.py
