[project]
name = "bloodbankenv"
version = "0.1.0"
description = "Simulates a hospital blood bank inventory for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.scripts]
server = "bloodbank.server:main"

[tool.hatch.build.targets.wheel]
packages = ["bloodbank"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
